recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:3: error: not found: value step
  if (step == 0){
      ^Spiral:9: error: missing arguments for method forward in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
    forward += increment
    ^Spiral:9: error: missing arguments for method forward in class Turtle;
follow this method with `_' if you want to treat it as a partially applied function
    forward += increment
    ^Spiral:10: error: value -= is not a member of Int
    steps -= 1
          ^